<resources>
    <!-- Global Strings -->
    <string name="appNameShort">musicDB</string>
    <string name="appNameComplete">musicDB - your personal music db</string>

    <!-- Title Strings -->
    <string name="title_about">About musicDB</string>
    <string name="title_albums">Your albums</string>
    <string name="title_artists">Your artists</string>
    <string name="title_songs">Your songs</string>
    <string name="title_add_album">New album</string>
    <string name="title_add_artist">New artist</string>
    <string name="title_add_song">New song</string>
    <string name="title_genre_selector">Your genres</string>

    <!-- Menu Strings -->
    <string name="menuHome">Home</string>
    <string name="menuSettings">Settings</string>
    <string name="menuSearch">Search</string>
    <string name="menuAlbums">Albums</string>
    <string name="menuArtists">Artists</string>
    <string name="menuTracks">Tracks</string>
    <string name="menuGenres">Genres</string>
    <string name="menuNewAlbum">New album</string>
    <string name="menuNewArtist">New artist</string>
    <string name="menuNewSong">New Song</string>
    <string name="menuNewGenre">New genre</string>

    <!-- Tile Strings -->
    <string name="AllSongs">Songs</string>
    <string name="AllAlbums">Albums</string>
    <string name="AllArtists">Artists</string>
    <string name="AllGenres">Genres</string>

    <!-- Languages -->
    <string name="language">Language</string>
    <string-array name="language_names">
        <item>No language, eg. percussions</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Portuguese</item>
        <item>Spanish</item>
    </string-array>

    <!-- Countries -->
    <string-array name="country_names">
        <item>unknown</item>
        <item>Canada</item>
        <item>France</item>
        <item>Germany</item>
        <item>Italy</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>USA</item>
    </string-array>

    <!-- Music genres -->
    <string name="genresLabel">Genres</string>
    <string-array name="genres">
        <item>Classic</item>
        <item>Country</item>
        <item>Electro</item>
        <item>Folklore</item>
        <item>House</item>
        <item>Pop</item>
        <item>Rock</item>
        <item>Metal</item>
        <item>Techno</item>
    </string-array>

    <!-- Artists -->
    <string-array name="artists">
        <item>Deborah de Luca</item>
        <item>Marika Rossa</item>
        <item>Richie Hawtin</item>
        <item>Format B</item>
        <item>Marco Carola</item>
        <item>Adam Beyer</item>
        <item>Dense and Pika</item>
        <item>Josh Wink</item>
        <item>Monika Kruse</item>
    </string-array>

    <!-- Album related Labels -->
    <string name="albumTitle">Title</string>
    <string name="albumArtist">Artist</string>
    <string name="albumDescription">Description</string>
    <string name="albumRelease">Release date</string>
    <string name="albumCover">Cover image</string>
    <string name="albumPrice">Price</string>
    <string name="albumGenre">Genre</string>
    <string name="albumDuration">Duration</string>
    <string name="listAlbums">Your albums:</string>
    <string name="albumLabel">Album</string>

    <!-- Artist related Labels -->
    <string name="artistName">Name</string>
    <string name="artistPicture">Picture</string>
    <string name="artistCountry">Country</string>
    <string name="listArtist">Your artists:</string>

    <!-- Song related Labels -->
    <string name="songTitle">Title</string>
    <string name="songDuration">Duration</string>
    <string name="songAlbum">Assign to albums</string>
    <string name="songArtist">Artist</string>
    <string name="songGenre">Genre</string>
    <string name="listSongs">Your songs:</string>
    <string name="songLabel">Song</string>

    <!-- Buttons -->
    <string name="btnSave">Save</string>
    <string name="btnImage">Choose image</string>

    <!-- Track related Labels -->
    <string name="trackName">Title</string>
    <string name="trackDuration">Duration</string>
    <string name="trackAlbum">Contained in the following albums</string>

    <!-- Lorem -->
    <string name="dummy">Lorem ipsum dolor sit amet</string>
</resources>