<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/add_album" android:icon="@drawable/add_album" app:showAsAction="always|withText"   android:title="@string/menuNewAlbum"/>
    <item
        android:id="@+id/add_song" android:icon="@drawable/add_song" app:showAsAction="always|withText" android:title="@string/menuNewTrack"/>
    <item
        android:id="@+id/add_artist" android:icon="@drawable/add_artist" app:showAsAction="always|withText" android:title="@string/menuNewArtist">
    </item>
    <item
        android:id="@+id/add_genre" android:icon="@drawable/add_genre" app:showAsAction="always|withText" android:title="@string/menuNewGenre">
    </item>
</menu>