<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="my.music.musicdb.AddAlbumActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        android:gravity="fill_vertical|fill_horizontal"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/title_add_album"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20dp" />
        </TableRow>
    </TableLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center_horizontal"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/albumTitle"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/tf_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_release"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/albumRelease"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/tf_edit_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_cover"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/albumCover"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/tf_edit_cover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_price"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/albumPrice"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/tf_edit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_language"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textAlignment="textEnd" />

            <Spinner
                android:id="@+id/s_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/language_names" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_artist"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/albumArtist"
                android:textAlignment="textEnd" />

            <Spinner
                android:id="@+id/s_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/artists" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_genre"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/albumGenre"
                android:textAlignment="textEnd" />

            <Spinner
                android:id="@+id/s_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/genres" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_span="2"
                android:text="@string/btnSave" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />
    </TableLayout>

</android.support.constraint.ConstraintLayout>