<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="my.music.musicdb.MainActivity.Songs">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="fill_vertical|fill_horizontal"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center_vertical"
                android:padding="3dip"
                android:text="@string/listSongs"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20dp" />
        </TableRow>
    </TableLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/black"
        android:gravity="center_horizontal"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:id="@+id/l_songs_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/songArtist"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/l_songs_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:text="@string/songTitle"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/l_songs_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/songGenre"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark" />

        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@android:color/black" />

    </TableLayout>

</android.support.constraint.ConstraintLayout>