<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="my.music.musicdb.AddSongActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:background="@color/Songs"
        android:gravity="center_horizontal"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:text="@string/songTitle"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/tf_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:ems="10"
                android:inputType="text" />

        </TableRow>
        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_release"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:text="@string/songDuration"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/tf_edit_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:ems="10"
                android:inputType="time" />

        </TableRow>
        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/l_edit_language"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:text="@string/songAlbum"
                android:textAlignment="textEnd" />

            <Spinner
                android:id="@+id/s_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:entries="@array/country_names" />

        </TableRow>
        <TableRow>

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_span="2"
                android:text="@string/btnSave" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>